--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     width: 100%;
     height: 50px;
     background-color: black;
+    cursor: pointer;
 }
 
 .navbar-container{
@@ -104,6 +105,7 @@ body{
     flex-direction: column;
     padding-top: 60px;
     align-items: center;
+    cursor: pointer;
     
 }
 
