--- a/admin.css
+++ b/admin.css
@@ -1,4 +1,4 @@
- body {
+ /* body {
     font-family: Arial, sans-serif;
   }
   
@@ -33,4 +33,4 @@
   .reset-button {
     background-color: #f44336;
     border-radius: 10px;
-  }
+  } */
